<resources>
    <string name="app_name">Registro Usuarios Android</string>
    <string name="btnRegister">Registrar Usuario</string>
    <string name="btnShow">Mostrar Usuario</string>
    <string name="btnList">Listar Usuario</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="back">Volver</string>
    <string name="lblRegister">Registro de Usuarios</string>
    <string name="lblName">Nombre:</string>
    <string name="lblSurname">Apellido:</string>
    <string name="txtNameHint">Nombre:</string>
    <string name="txtSurnameHint">Apellido:</string>
    <string name="lblRut">Rut:</string>
    <string name="txtRutHint">Rut:</string>
    <string name="lblAge">Edad:</string>
    <string name="txtAgeHint">Edad:</string>
    <string name="lblGender">Género:</string>
    <string name="lblM">Masculino</string>
    <string name="lblF">Femenino</string>
    <string name="lblSoda">Bebida Favorita:</string>

    <string-array name="soft_drinks_array">
        <item>Coca-Cola</item>
        <item>Pepsi</item>
        <item>Sprite</item>
        <item>Bilz</item>
        <item>Pap</item>
        <item>Canada Dry</item>
        <item>7-up</item>
    </string-array>

    <string name="btnBack">Volver</string>
    <string name="lblUserCountTitle">Cantidad de Usuarios:</string>

    <string name="lblShowTitle">Usuario</string>
    <string name="showDefault">----</string>
    <string name="btnPrevious">Anterior</string>
    <string name="btnNext">Siguiente</string>
    <string name="lblDefaultNumber">0</string>
</resources>
